--- a/src/SqlBackupToS3/SqlBackupToS3.csproj
+++ b/src/SqlBackupToS3/SqlBackupToS3.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AmazonWebServices" Version="1.2.0" />
-    <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="170.18.0" />
+    <PackageReference Include="AmazonWebServices" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="170.21.0" />
   </ItemGroup>
 
 </Project>
