--- a/samples/Sample.Api/appsettings.json
+++ b/samples/Sample.Api/appsettings.json
@@ -5,5 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "SqlServerConnection": ""
+  },
+
+  "AmazonCredentialOptions": {
+    "AccessKey": "",
+    "SecretKey": ""
+  },
+
+  "AmazonS3Options": {
+    "BucketName": "",
+    "Region": "eu-central-1"
+  }
 }
