--- a/src/SqlBackupToS3/SqlBackupToS3.csproj
+++ b/src/SqlBackupToS3/SqlBackupToS3.csproj
@@ -5,8 +5,35 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageId>SqlBackupToS3</PackageId>
+    <Version>2.0.0</Version>
+    <Authors>Barış Yerlikaya</Authors>
+    <Company>Barış Yerlikaya</Company>
+    <Product>SqlBackupToS3</Product>
+    <Title>Sql Backup to Amazon S3</Title>
+    <Description>It backs up the MSSQL database you specify, compresses it into zip and backs it up to aws s3.</Description>
+    <Copyright>Copyright (c) 2023 Barış Yerlikaya</Copyright>
+    <PackageProjectUrl>https://github.com/byerlikaya/SqlBackupToS3</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/byerlikaya/SqlBackupToS3</RepositoryUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageTags>backup s3-backup sql-backup mssql-backup sql-backup-to-s3 sql-backup-to-amazon-s3</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="AmazonWebServices" Version="2.0.0" />
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AmazonWebServices" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="170.21.0" />
   </ItemGroup>
